# cppitch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  test.sh
src/: common.hpp  main.cpp
src/util/: Download.cpp  Logger.cpp  download.cpp  download.hpp  logger.cpp  logger.hpp
